tests/errors/preprocessor/not_enough_arguments.c
#define f(a, b) (a + 1)


void main()
{
	print(f(1));

}
